fix pipline running twice issue
Now pipeline will only run with PR

--- a/.github/workflows/flutter.yaml
+++ b/.github/workflows/flutter.yaml
@@ -1,6 +1,8 @@
-name: Application ON Push & PR DO Code check
-on: [push, pull_request]
-
+name: Application ON PR DO Code check
+on:
+  pull_request:
+    branches:
+      - master
 jobs:
   code-check:
     runs-on: ubuntu-latest
