--- a/packages/color_generator/analysis_options.yaml
+++ b/packages/color_generator/analysis_options.yaml
@@ -1,1 +1,8 @@
 include: package:solid_lints/analysis_options.yaml
+
+dart_code_metrics:
+  rules:
+    - prefer-match-file-name:
+        exclude:
+          - test/**
+    
