--- a/packages/color_generator/pubspec.yaml
+++ b/packages/color_generator/pubspec.yaml
@@ -14,7 +14,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+    
+  mocktail: ^0.3.0
   solid_lints: ^0.0.16
 
 flutter:
