--- a/packages/color_generator/pubspec.yaml
+++ b/packages/color_generator/pubspec.yaml
@@ -8,13 +8,13 @@ environment:
   flutter: ">=1.17.0"
 
 dependencies:
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-    
   mocktail: ^0.3.0
   solid_lints: ^0.0.16
 
