implemented unique random generator

--- a/packages/color_generator/analysis_options.yaml
+++ b/packages/color_generator/analysis_options.yaml
@@ -5,4 +5,7 @@ dart_code_metrics:
     - prefer-match-file-name:
         exclude:
           - test/**
+    - avoid-late-keyword:
+        exclude:
+          - test/**
     
