--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,10 +8,14 @@ environment:
   sdk: '>=3.0.5 <4.0.0'
 
 dependencies:
+  color_generator:
+    path: packages/color_generator
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.3
 
 dev_dependencies:
+  bloc_test: ^9.1.3
   flutter_test:
     sdk: flutter
 
