--- a/.github/workflows/flutter.yaml
+++ b/.github/workflows/flutter.yaml
@@ -1,12 +1,4 @@
-name: Application ON PR DO Code check
-on:
-  pull_request:
-    branches:
-      - master
-jobs:
-  code-check:
-    runs-on: ubuntu-latest
-
+runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
           
@@ -14,8 +6,8 @@ jobs:
         id: check_files
         uses: andstor/file-existence-action@v1
         with:
-          files: "pubspec.yaml"
-
+          files: "pubspec.yaml packages/*/pubspec.yaml"
+      
       - name: Setup flutter
         if: steps.check_files.outputs.files_exists == 'true'
         uses: subosito/flutter-action@v2
@@ -26,54 +18,57 @@ jobs:
         if: steps.check_files.outputs.files_exists == 'true'
         run: flutter --version
       
-      - name: Get dependencies
-        if: steps.check_files.outputs.files_exists == 'true'
-        run: flutter pub get
-      
       - name: Setup Dart Code Metrics
-        if: steps.check_files.outputs.files_exists == 'true'
-        run: dart pub get dart_code_metrics
+        run: dart pub global activate dart_code_metrics
 
-      - name: Dart Code Metrics
-        if: steps.check_files.outputs.files_exists == 'true'
+      - name: Analyze code and run tests
         run: |
-          dirs_to_analyse=""
-          if [ -d lib ]; then dirs_to_analyse+=" lib"; fi
-          if [ -d test ]; then dirs_to_analyse+=" test"; fi
-          if [ -d example ]; then dirs_to_analyse+=" example"; fi
+          IFS="," read -ra FILES <<< "${{ steps.check_files.outputs.files }}"
+          for FILE in "${FILES[@]}"; do
+            DIR=$(dirname "$FILE")
+            echo "Analyzing $DIR"
+            cd "$DIR"
 
-          if [ dirs_to_analyse != "" ]
-          then
-            dart run dart_code_metrics:metrics \
-              analyze \
-              $dirs_to_analyse \
-              --fatal-warnings \
-              --fatal-performance \
-              --fatal-style \
-              --disable-sunset-warning
-            dart run dart_code_metrics:metrics \
-              check-unused-files \
-              $dirs_to_analyse \
-              --fatal-unused \
-              --disable-sunset-warning
-            dart run dart_code_metrics:metrics \
-              check-unused-code \
-              $dirs_to_analyse \
-              --fatal-unused \
-              --disable-sunset-warning
-          fi
+            if [[ -f "pubspec.yaml" ]]; then
+              flutter pub get
+              dart pub get dart_code_metrics
 
-      - name: Check formatting
-        if: steps.check_files.outputs.files_exists == 'true'
-        run: dart format . --set-exit-if-changed
+              # Run analysis
+              dirs_to_analyse=""
+              if [ -d lib ]; then dirs_to_analyse+=" lib"; fi
+              if [ -d test ]; then dirs_to_analyse+=" test"; fi
+              if [ -d example ]; then dirs_to_analyse+=" example"; fi
 
-      - name: Run tests
-        if: steps.check_files.outputs.files_exists == 'true'
-        run: |
-          # run tests if `test` folder exists
-          if [ -d test ]
-          then
-              flutter test -r expanded
-          else
-              echo "Tests not found."
-          fi
+              if [ dirs_to_analyse != "" ]; then
+                dart run dart_code_metrics:metrics \
+                  analyze \
+                  $dirs_to_analyse \
+                  --fatal-warnings \
+                  --fatal-performance \
+                  --fatal-style \
+                  --disable-sunset-warning
+                dart run dart_code_metrics:metrics \
+                  check-unused-files \
+                  $dirs_to_analyse \
+                  --fatal-unused \
+                  --disable-sunset-warning
+                dart run dart_code_metrics:metrics \
+                  check-unused-code \
+                  $dirs_to_analyse \
+                  --fatal-unused \
+                  --disable-sunset-warning
+              fi
+
+              # Check formatting
+              dart format . --set-exit-if-changed
+
+              # Run tests if `test` folder exists
+              if [ -d test ]; then
+                  flutter test -r expanded
+              else
+                  echo "Tests not found."
+              fi
+            fi
+
+            cd -
+          done
