--- a/.github/workflows/flutter.yaml
+++ b/.github/workflows/flutter.yaml
@@ -1,4 +1,11 @@
-runs-on: ubuntu-latest
+name: Application ON PR DO Code check
+on:
+  pull_request:
+    branches:
+      - master
+jobs:
+  code-check:
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
           
