--- a/.github/workflows/flutter.yaml
+++ b/.github/workflows/flutter.yaml
@@ -13,7 +13,7 @@ jobs:
         id: check_files
         uses: andstor/file-existence-action@v1
         with:
-          files: "pubspec.yaml packages/*/pubspec.yaml"
+          files: "pubspec.yaml, packages/*/pubspec.yaml"
       
       - name: Setup flutter
         if: steps.check_files.outputs.files_exists == 'true'
