--- a/.github/workflows/flutter.yaml
+++ b/.github/workflows/flutter.yaml
@@ -29,6 +29,7 @@ jobs:
         run: dart pub global activate dart_code_metrics
 
       - name: Analyze code and run tests
+        if: steps.check_files.outputs.files_exists == 'true'
         run: |
           IFS="," read -ra FILES <<< "${{ steps.check_files.outputs.files }}"
           for FILE in "${FILES[@]}"; do
