added step to make file executable

--- a/.github/workflows/flutter.yaml
+++ b/.github/workflows/flutter.yaml
@@ -28,6 +28,10 @@ jobs:
       - name: Setup Dart Code Metrics
         run: dart pub global activate dart_code_metrics
 
+      - name: Make script executable
+        run: chmod +x .github/scripts/analyze_and_test.sh
+
+
       - name: Analyze code and run tests
         if: steps.check_files.outputs.files_exists == 'true'
         run: .github/scripts/analyze_and_test.sh "${{ steps.check_files.outputs.files }}"
