--- a/.github/workflows/flutter.yaml
+++ b/.github/workflows/flutter.yaml
@@ -15,23 +15,5 @@ jobs:
         with:
           files: "pubspec.yaml, packages/*/pubspec.yaml"
       
-      - name: Setup flutter
-        if: steps.check_files.outputs.files_exists == 'true'
-        uses: subosito/flutter-action@v2
-        with:
-          channel: 'stable'
-      
-      - name: Check flutter sdk version
-        if: steps.check_files.outputs.files_exists == 'true'
-        run: flutter --version
-      
-      - name: Setup Dart Code Metrics
-        run: dart pub global activate dart_code_metrics
-
-      - name: Make script executable
-        run: chmod +x .github/scripts/analyze_and_test.sh
-
-
-      - name: Analyze code and run tests
-        if: steps.check_files.outputs.files_exists == 'true'
-        run: .github/scripts/analyze_and_test.sh "${{ steps.check_files.outputs.files }}"
+      - name: Debug check_files output
+        run: echo "${{ steps.check_files.outputs.files }}"
